--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ nav {
 	width: 60vw;
 	display: flex;
 	gap: 42px;
-	font-size: 2vh;
+	font-size: 1rem;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
@@ -85,6 +85,7 @@ nav {
 	width: 50vw;
 	height: 84vh;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
@@ -174,9 +175,11 @@ footer p {
 	margin: 0 auto;
 }
 
-@media only screen and (max-width: 950px){
+/* MEDIA QUERY QUE EU CRIEI*/
+
+@media only screen and (min-width: 601px) and (max-width: 1024px){
 	header {
-		height: 8vh;
+		height: 8%;
 		width: 100%;
 	}
 
@@ -190,34 +193,41 @@ footer p {
 
 	nav {
 		text-align: center;
+		/*font-size: 4vh;*/
 	}
 
 	nav a {
 		margin: auto;
 	}
 
-	/*.card-login {
-		height: 84vh;
-	}*/
-
 	.main-login {
-		height: 84vh;
+		height: 84%;
+		margin: 20px 0 20px 0;
 	}
 
 	.left-login {
 		height: 100%;
 	}
 
-	.right-login {
-		height: 100%;
+	.left-login-image {
+		width: 80%;
+		margin: 8px;
 	}
 
-	.card-login {
-		width: 85%;
-	}
+	.right-login {
+		width: 50%;
+		height: auto;
+		align-items: center;
+	  }
+
+	  .card-login {
+		width: 90%;
+		height: auto;
+		text-align: center;
+	  }
 
 	footer {
-		height: 8vh;
+		height: 8%;
 	}
 }
 
@@ -254,6 +264,7 @@ footer p {
 	.main-login {
 		flex-direction: column;
 		height: 84%;
+		margin: 20px 0 20px 0;
 	}
 
 	.left-login > h1 {
@@ -265,9 +276,15 @@ footer p {
 		height: auto;
 	}
 
+	.left-login-image {
+		width: 80%;
+		margin: 8px;
+	  }
+
 	.right-login {
 		width: 100%;
-		height: auto;		
+		height: auto;
+		align-items: center;
 	}
 
 	.left-login-image {
@@ -277,7 +294,7 @@ footer p {
 
 	.card-login {
 		width: 90%;
-		margin-bottom: 8px;
+		text-align: center;
 	}
 
 	footer {
