--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,700;1,400&display=swap');
-
+/* Para todas as páginas*/
 body {
 	margin: 0;
 	font-family: 'Noto Sans', sans-serif;
@@ -54,6 +54,111 @@ nav {
 	line-height: normal;
 	justify-content: space-around;
 }
+
+footer {
+	border-top: 0.2px solid white;
+	width: 100vw;
+	height: 8vh;
+	padding: 32px;
+	text-align: center;
+}
+
+footer p {
+	display: block;
+	color: #c0c0c0;
+	margin: 0 auto;
+}
+
+main {
+	margin: 20px;
+}
+
+main h1, h2, h3 {
+	color: #33ff99;
+}
+
+main h1, h2 {
+	text-align: center;
+}
+
+/*Home page*/
+
+.descricao {
+	gap: 24px;
+}
+
+.descricao-inicio {
+	color: #c0c0c0;
+	display: flex;
+	flex-direction: row;
+	text-align: justify;
+	gap: 24px;
+}
+
+.descricao img {
+	height: auto;
+	border-radius: 10px;
+}
+
+.descricao-texto p {
+	text-indent: 20px;	
+}
+
+.servicos ul li {
+	list-style-type: none;
+}
+
+.servicos ul li p {
+	color: #c0c0c0;
+}
+
+.container-depoimentos {
+	display: flex;
+	flex-direction: row;
+	gap: 24px;
+}
+
+.depoimento {
+	border: 2px solid #ccc;
+	background-color: #eee;
+	border-radius: 5px;
+	padding: 16px;
+	margin: auto;
+	text-align: justify;
+}
+
+.depoimento p {
+	text-indent: 20px;
+}
+
+.depoimento::after {
+	content: "";
+	clear: both;
+	display: table;
+  }
+
+  .depoimento img {
+	float: left;
+	margin-right: 20px;
+	border-radius: 50%;
+  }
+
+  .depoimento span {
+	font-size: 20px;
+	margin-right: 15px;
+  }
+
+  .paralelos {
+	align-items: center;
+	text-align: center;
+  }
+
+  .mapa {
+	align-items: center;
+	border-radius: 10px;
+  }
+
+/* Para a página de login*/
 
 .main-login {
 	width: 100vw;
@@ -161,23 +266,9 @@ nav {
 	box-shadow: 0px 10px 40px -12px #00ff8052;
 }
 
-footer {
-	border-top: 0.2px solid white;
-	width: 100vw;
-	height: 8vh;
-	padding: 32px;
-	text-align: center;
-}
 
-footer p {
-	display: block;
-	color: #00ff88;
-	margin: 0 auto;
-}
 
-/* MEDIA QUERY QUE EU CRIEI*/
-
-@media only screen and (min-width: 601px) and (max-width: 1024px){
+@media only screen and (min-width: 601px) and (max-width: 999px){
 	header {
 		height: 8%;
 		width: 100%;
@@ -229,6 +320,26 @@ footer p {
 	footer {
 		height: 8%;
 	}
+
+	.descricao-inicio {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.container-foto {
+		margin: auto;
+	}
+
+	.mapa {
+		width: 600px;
+		height: 450px;
+    }
+
+	.container-depoimentos {
+		display: flex;
+		flex-direction: column;
+	}
+
 }
 
 @media only screen and (max-width: 600px){
@@ -300,4 +411,24 @@ footer p {
 	footer {
 		height: 8%;
 	}
+
+	.descricao-inicio {
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.container-foto {
+		margin: auto;
+	}
+
+	.mapa {
+		width: 300px;
+		height: 300px;
+    }
+
+	.container-depoimentos {
+		display: flex;
+		flex-direction: column;
+	}
+
 }
