--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,8 +305,8 @@ text-align: justify;
 }
 
 .card-signup {
-	width: 60%;
-	height: 95%;
+	width: 100%;
+	height: auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -319,6 +319,8 @@ text-align: justify;
 
 .card-login > h1 {
 	color: #00ff88;
+	width: 100%;
+	height: auto;
 	font-weight: 800;
 	margin: 0;
 	margin-bottom: 20px;
@@ -440,7 +442,7 @@ label > textarea::placeholder {
 	margin-left: 0;
 }
 
-@media only screen and (min-width: 601px) and (max-width: 1200px) {
+@media only screen and (min-width: 601px) and (max-width: 1280px) {
 	header {
 		height: 8%;
 		width: 100%;
@@ -478,6 +480,7 @@ label > textarea::placeholder {
 
 	.left-login-signup-image {
 		width: 80%;
+		height: auto;
 		margin: 8px;
 	}
 
