--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,8 @@ label > textarea::placeholder {
 	margin-left: 0;
 }
 
+/*Aqui começam as media queries*/
+
 @media only screen and (min-width: 601px) and (max-width: 1280px) {
 	header {
 		height: 8%;
